syntax = "proto3";

package ntx.v1;

import "ntx/v1/common.proto";

option go_package = "github.com/voidarchive/ntx/gen/go/ntx/v1;ntxv1";

service ScreenerService {
  rpc Screen(ScreenRequest) returns (ScreenResponse);
  rpc ListTopGainers(ListTopGainersRequest) returns (ListTopGainersResponse);
  rpc ListTopLosers(ListTopLosersRequest) returns (ListTopLosersResponse);
}

message ScreenRequest {
  Sector sector = 1;
  optional double min_price = 2;
  optional double max_price = 3;
  optional double min_pe = 4;
  optional double max_pe = 5;
  optional double min_pb = 6;
  optional double max_pb = 7;
  optional double min_change = 8; // percent
  optional double max_change = 9;
  optional double min_market_cap = 10;
  optional double max_market_cap = 11;
  optional int64 min_volume = 12;
  bool near_52w_high = 13; // within 5%
  bool near_52w_low = 14;  // within 5%
  SortBy sort_by = 15;
  SortOrder sort_order = 16;
  int32 limit = 17;
  int32 offset = 18;
}

enum SortBy {
  SORT_BY_UNSPECIFIED = 0;
  SORT_BY_SYMBOL = 1;
  SORT_BY_PRICE = 2;
  SORT_BY_CHANGE = 3;
  SORT_BY_VOLUME = 4;
  SORT_BY_TURNOVER = 5;
  SORT_BY_MARKET_CAP = 6;
  SORT_BY_PE = 7;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

message ScreenResponse {
  repeated ScreenResult results = 1;
  int32 total = 2;
}

message ScreenResult {
  Company company = 1;
  Price price = 2;
  Fundamentals fundamentals = 3;
}

message ListTopGainersRequest {
  int32 limit = 1;
  Sector sector = 2;
}

message ListTopGainersResponse {
  repeated Price stocks = 1;
}

message ListTopLosersRequest {
  int32 limit = 1;
  Sector sector = 2;
}

message ListTopLosersResponse {
  repeated Price stocks = 1;
}
